--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "dev": "nodemon -e ts --exec \"yarn serve\""
   },
   "dependencies": {
-    "aws-sdk": "^2.528.0"
+    "aws-sdk": "^2.528.0",
+    "elasticsearch": "^16.4.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.11",
     "@types/aws-serverless-express": "^3.3.1",
     "@types/compression": "^1.0.1",
     "@types/cors": "^2.8.6",
+    "@types/elasticsearch": "^5.0.35",
     "@types/express": "^4.17.1",
     "@types/http-server": "^0.10.0",
     "@types/node": "^7.0.18",
